--- a/app/src/main/res/layout/fragment_song_list.xml
+++ b/app/src/main/res/layout/fragment_song_list.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/activity_vertical_margin"
+    android:background="@color/black"
     tools:context="com.example.iceman.mp3player.fragments.FragmentSongList">
 
     <ProgressBar
