--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_size_normal">14dp</dimen>
     <dimen name="text_size_small">12dp</dimen>
+    <dimen name="text_size_big">18dp</dimen>
 </resources>
