--- a/app/src/main/res/layout/custom_notfication.xml
+++ b/app/src/main/res/layout/custom_notfication.xml
@@ -7,9 +7,11 @@
 
     <ImageView
         android:id="@+id/img_album_art_noti"
+        android:layout_marginLeft="-10dp"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_centerVertical="true"
+
         android:src="@mipmap/ic_launcher" />
 
     <RelativeLayout
