--- a/app/src/main/res/layout/activity_play_music.xml
+++ b/app/src/main/res/layout/activity_play_music.xml
@@ -10,6 +10,7 @@
     tools:context="com.example.iceman.mp3player.activities.PlayMusicActivity">
 
     <RelativeLayout
+        android:layout_marginTop="24dp"
         android:id="@+id/rl_song_detail"
         android:layout_width="match_parent"
         android:layout_height="80dp"
