--- a/app/src/main/res/layout/custom_notfication.xml
+++ b/app/src/main/res/layout/custom_notfication.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@android:color/black">
+    android:layout_height="wrap_content">
 
 
     <ImageView
@@ -67,7 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:src="@drawable/pb_play"/>
+            android:src="@drawable/pb_pause"/>
 
         <ImageView
             android:id="@+id/btn_next_noti"
