--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -13,16 +13,10 @@
         android:layout_height="match_parent" />
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_detail"
-        android:background="@color/pager_background"
+        android:background="@color/toolbar_transparent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize">
-        <TextView
-            android:textColor="@color/white"
-            android:textSize="@dimen/text_size_big"
-            android:text="@string/detail_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
     </android.support.v7.widget.Toolbar>
     <android.support.design.widget.TabLayout
         android:layout_below="@+id/toolbar_detail"
