--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.iceman.mp3player.activities.MainActivity"
-    tools:showIn="@layout/app_bar_main"
+    android:fitsSystemWindows="true"
     android:background="@color/usui_grey">
     <ImageView
         android:id="@+id/img_wallpaper_main"
@@ -37,72 +35,77 @@
         android:layout_below="@id/toolbar_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
-    <LinearLayout
-        android:id="@+id/current_playing_bar"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:orientation="horizontal"
-        android:background="@color/pager_background"
-        android:layout_alignParentBottom="true">
-        <LinearLayout
-            android:layout_weight="0.3"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
-            <ImageView
-                android:id="@+id/img_album_current_bar"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY"
-                android:src="@drawable/adele"/>
-        </LinearLayout>
-        <LinearLayout
-            android:paddingLeft="5dp"
-            android:orientation="vertical"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
-            <TextView
-                android:id="@+id/tv_song_title_current"
-                android:gravity="center_vertical"
-                android:layout_weight="1"
-                android:maxLines="1"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:text="@string/list_song"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_size_normal"/>
-            <TextView
-                android:id="@+id/tv_artist_current"
-                android:gravity="center_vertical"
-                android:layout_weight="1"
-                android:maxLines="1"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:text="@string/artist_list"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_size_small"
-                />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_weight="0.6"
-            android:orientation="horizontal"
-            android:layout_height="match_parent">
-            <ImageView
-                android:layout_weight="1"
-                android:padding="5dp"
-                android:id="@+id/btn_play_pause_current"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/pb_pause"/>
-            <ImageView
-                android:layout_weight="1"
-                android:padding="5dp"
-                android:id="@+id/btn_next_current"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:src="@drawable/pb_next"/>
-        </LinearLayout>
-    </LinearLayout>
+   <RelativeLayout
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_alignParentBottom="true"
+       android:background="@color/pager_background">
+       <LinearLayout
+           android:id="@+id/current_playing_bar"
+           android:layout_width="match_parent"
+           android:layout_height="55dp"
+           android:orientation="horizontal"
+           android:background="?attr/selectableItemBackground">
+           <LinearLayout
+               android:layout_weight="0.3"
+               android:layout_width="0dp"
+               android:layout_height="match_parent">
+               <ImageView
+                   android:id="@+id/img_album_current_bar"
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent"
+                   android:scaleType="fitXY"
+                   android:src="@drawable/adele"/>
+           </LinearLayout>
+           <LinearLayout
+               android:paddingLeft="5dp"
+               android:orientation="vertical"
+               android:layout_weight="1"
+               android:layout_width="0dp"
+               android:layout_height="match_parent">
+               <TextView
+                   android:id="@+id/tv_song_title_current"
+                   android:gravity="center_vertical"
+                   android:layout_weight="1"
+                   android:maxLines="1"
+                   android:layout_width="match_parent"
+                   android:layout_height="0dp"
+                   android:text="@string/list_song"
+                   android:textColor="@color/white"
+                   android:textSize="@dimen/text_size_normal"/>
+               <TextView
+                   android:id="@+id/tv_artist_current"
+                   android:gravity="center_vertical"
+                   android:layout_weight="1"
+                   android:maxLines="1"
+                   android:layout_width="wrap_content"
+                   android:layout_height="0dp"
+                   android:text="@string/artist_list"
+                   android:textColor="@color/white"
+                   android:textSize="@dimen/text_size_small"
+                   />
+           </LinearLayout>
+           <LinearLayout
+               android:layout_width="0dp"
+               android:layout_weight="0.6"
+               android:orientation="horizontal"
+               android:layout_height="match_parent">
+               <ImageView
+                   android:layout_weight="1"
+                   android:padding="5dp"
+                   android:id="@+id/btn_play_pause_current"
+                   android:layout_width="0dp"
+                   android:layout_height="match_parent"
+                   android:src="@drawable/pb_pause"/>
+               <ImageView
+                   android:layout_weight="1"
+                   android:padding="5dp"
+                   android:id="@+id/btn_next_current"
+                   android:layout_width="0dp"
+                   android:layout_height="match_parent"
+                   android:src="@drawable/pb_next"/>
+           </LinearLayout>
+       </LinearLayout>
+   </RelativeLayout>
 
 </RelativeLayout>
